commited all files

--- a/index.html
+++ b/index.html
@@ -445,7 +445,12 @@
     <footer>
       <div class="container">
         <div class="title">
-          <h2>Developer <span>Junaid</span></h2>
+         
+          <h2>Developer
+            <a href="https://www.linkedin.com/in/emmanuel-umeh-35078924b">
+              <span>Emmanuel Umeh</span>
+            </h2>
+         </a>
         </div>
       </div>
     </footer>
